@@ -156,29 +156,43 @@ setMethod("genericObjFunConvert", signature("MxRAMObjective", "MxFlatModel"),
 				"dimnames of the observed covariance matrix")
 			stop(msg, call. = FALSE)
 		}
-		.Object@depth <- generateRAMDepth(flatModel, aMatrix)
+		.Object@depth <- generateRAMDepth(flatModel, aMatrix, model@options)
 		return(.Object)
 })
 
-generateRAMDepth <- function(flatModel, aMatrixName) {
+generateRAMDepth <- function(flatModel, aMatrixName, modeloptions) {
 	mxObject <- flatModel[[aMatrixName]]
 	if (!is(mxObject, "MxMatrix")) {
 		return(as.integer(NA))
+	} else if (!is.null(modeloptions[['RAM Optimization']]) && 
+		is.logical(modeloptions[['RAM Optimization']]) &&
+		all(!modeloptions[['RAM Optimization']])) {
+		return(as.integer(NA))
 	}
+	maxdepth <- modeloptions[['RAM Max Depth']]
+	if (is.null(maxdepth) || (length(maxdepth) != 1) ||
+		is.na(maxdepth) || !is.numeric(maxdepth) || maxdepth < 0) {
+		maxdepth <- nrow(mxObject) * ncol(mxObject) - 1
+	}
+	return(omxGetRAMDepth(mxObject, maxdepth))
+}
+
+omxGetRAMDepth <- function(A, maxdepth = nrow(A) * ncol(A) - 1) {
+	mxObject <- A
 	aValues <- matrix(0, nrow(mxObject), ncol(mxObject))
 	aValues[mxObject@free] <- 1
 	aValues[mxObject@values != 0] <- 1
-	return(generateDepthHelper(aValues, 0))
+	return(generateDepthHelper(aValues, 0, maxdepth))
 }
 
-generateDepthHelper <- function(aValues, depth) {
-	if (depth == (nrow(aValues) * ncol(aValues))) {
+generateDepthHelper <- function(aValues, depth, maxdepth) {
+	if (depth > maxdepth) {
 		return(as.integer(NA))
 	}
 	if (all(aValues == 0)) { 
 		return(as.integer(depth))
 	} else {
-		return(generateDepthHelper(aValues %*% aValues, depth + 1))
+		return(generateDepthHelper(aValues %*% aValues, depth + 1, maxdepth))
 	}
 }
 
